--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -109,18 +109,6 @@ body {
   background: $secondary-color !important;
 }
 
-// #root {
-//   .css-0 {
-// &:first-child {
-//   display: none;
-// }
-// &:last-child {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-// }
-//   }
-// }
 ol,
 ul {
   list-style: none;
@@ -143,6 +131,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
 body ::-webkit-scrollbar {
   display: none;
 }
@@ -151,6 +140,16 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
 b {
   font-weight: bold;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-text-fill-color: #000 !important;
 }
