--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -1,8 +1,8 @@
-$primary-color: #a0d2eb;
-$secondary-color: #e5eaf5;
-$accent-color: #d0bdf4;
-$highlight-color: #845bb3;
-$dark-color: #494d5f;
+$primary-color: #ff5480;
+$secondary-color: #fff;
+$accent-color: #f9f9fb;
+$highlight-color: #9b9b9b;
+$dark-color: #18003c; //111210
 
 @mixin align-center() {
   display: flex;
@@ -22,3 +22,5 @@ $dark-color: #494d5f;
     background: $accent-color;
   }
 }
+
+// filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
