--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -107,6 +107,8 @@ section {
 body {
   line-height: 1;
   background: $secondary-color !important;
+  min-height: 100vh;
+  @include align-center();
 }
 
 ol,
