--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -17,6 +17,11 @@ $dark-color: #18003c; //111210
   align-items: center;
 }
 
+@mixin align-wrap() {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
 @mixin list-item() {
   color: $secondary-color;
   background: $highlight-color;
